versions/v3.7.0/build/dts/api/bindings/input/futaba,sbus.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/build/dts/api/bindings/input/futaba,sbus.html
original_path: build/dts/api/bindings/input/futaba,sbus.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down list at the bottom of the left panel and select the desired version.

# futaba,sbus (on uart bus)

Vendor: [Futaba Corporation](../../bindings.md#dt-vendor-futaba)

## Description

```text
SBUS input driver using
This driver implements the SBUS protocol used on RC radio's
to send out analogue joystick and switches output.
SBUS is an single-wire inverted serial protocol so either you need to use
the rx-invert feature of your serial driver or use an external signal inverter.
The driver binds this to the Zephyr input system using INPUT_EV_CODES.

The following examples defines a binding of 2 joysticks and a button using 5 channels.

&lpuart6 {
  status = "okay";

  sbus {
      compatible = "futaba,sbus";
      right_stick_x {
          channel = <1>;
          type = <INPUT_EV_ABS>;
          zephyr,code = <INPUT_ABS_RX>;
      };
      right_stick_y {
          channel = <2>;
          type = <INPUT_EV_ABS>;
          zephyr,code = <INPUT_ABS_RY>;
      };
      left_stick_x {
          channel = <3>;
          type = <INPUT_EV_ABS>;
          zephyr,code = <INPUT_ABS_X>;
      };
      left_stick_y {
          channel = <4>;
          type = <INPUT_EV_ABS>;
          zephyr,code = <INPUT_ABS_Y>;
      };
      kill_switch {
          channel = <5>;
          type = <INPUT_EV_KEY>;
          zephyr,code = <INPUT_KEY_0>;
      };
  };
};
```

## Properties

### Top level properties

These property descriptions apply to “futaba,sbus”
nodes themselves. This page also describes child node
properties in the following sections.

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

(None)

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “futaba,sbus” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |

### Child node properties

| Name | Type | Details |
| --- | --- | --- |
| `channel` | `int` | ```text SBUS input channel Valid range: 1 - 16 ```  This property is **required**. |
| `type` | `int` | ```text Input event types see INPUT_EV_CODES ```  This property is **required**. |
| `zephyr,code` | `int` | ```text Code to emit. ```  This property is **required**. |
